tests/ui/traits/const-traits/const-auto-trait.rs
#![feature(auto_traits, const_trait_impl)]

const auto trait Marker {}
//~^ ERROR: auto traits cannot be const

fn main() {}
